--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "fitimage",
   "version": "1.0",
   "dependencies": {},
-  "main": "dist/jquery.fitimage.min.js"
+  "main": "dist/jquery.fitimage.min.js",
   "devDependencies": {
     "jquery": "~2.1.1"
   }
